--- a/B.tex
+++ b/B.tex
@@ -85,7 +85,7 @@ Heart tissue with different timing parameters form the electrical conduction sys
 %In the following sections, we demonstrate how to construct heart models for closed-loop verification of implantable pacemaker. Note that for two different applications the models are constructed differently as we address their respective requirements for environment models. 
 
 
-\section{Heart Models For Closed-loop Testing}
+\section{Closed-loop Testing with Deterministic Heart Models}
 %\begin{itemize}
 	%\item Why the models at this level have to be deterministic? Where can they be used?
     %\item How electrophysiology reflects the functions of the heart?
@@ -177,22 +177,22 @@ In EP testing and during pacemaker implantation, the local electrical activities
 %\vspace{-15pt}
 \end{figure}
 
-\section{Non-deterministic Models for Closed-loop Model Checking}
+\section{Closed-loop Model Checking with Non-deterministic Heart Models }
 %\begin{itemize}
 	%\item What does nondeterminism do? Where can these model be used?
     %\item How to replace complex dynamics of the deterministic models with nondeterminism?
     %\item What are the abstraction rules that can be applied to the heart models and what are their physiological basis?
     %\item How to encode the information loss during each abstraction steps?
 %\end{itemize}
-During closed-loop model checking, the whole closed-loop state space of the device and the environment is mathematically explored against physiological requirements. The  ideal environment models should be: 1) simple enough to avoid the state space explosion problem, 2) general enough to cover possible physiological conditions, 3) complex enough to represent any specific physiological conditions. It is obvious that no single model can achieve all three properties. A rigorous framework should be adapted so that models with the appropriate level of refinement, from a family of models, are selected based on the requirement type. For example, for a simple property that the pacemaker must maintain the heart rate above a desired level, a relatively abstract model will suffice. For a more complex property such as the termination of Pacemaker Mediated Tachycardia~\cite{josephson}, an appropriately refined model which expresses the physiological condition will be selected.
+During closed-loop model checking, the whole closed-loop state space of the device and the environment is mathematically explored against physiological requirements. The  ideal environment models should be: (1) simple enough to avoid the state space explosion problem (\cite{Abstraction}), (2) general enough to cover possible physiological operation parameters, and (3) expressive enough to represent specific physiological conditions in-depth. It is obvious that no single model can achieve all three properties. A rigorous framework should be adapted so that models with the appropriate level of refinement, from a family of models, are selected based on the requirement type. For example, for a simple property that the pacemaker must maintain the heart rate above a desired level, a relatively abstract model will suffice. For a more complex property such as the termination of Pacemaker Mediated Tachycardia (\cite{josephson}), an appropriately refined model which expresses the physiological condition will be selected.
 
 \subsection{Modeling Philosophy}
-\textbf{Model Formalism: }Choosing an appropriate formalism for the physiological models is important as the formalism determines the closed-loop state space and the feasibility/efficiency to do model checking. Pacemaker utilize the timing of local electrical events to diagnose heart conditions. It is therefore intuitive to use timed-automata models of the heart. Timed-automata is compatible with model checking tools like UPPAAL (\cite{uppaal_tut}) so that the whole closed-loop state space can be explored.\\
-\textbf{Model Coverage: }Pacemakers are designed to treat bradycardia, however not only should the pacemakers maintain appropriate heart rate when the intrinsic rate is low, but also shall not adversely affect other heart conditions. Even for the same patient, the heart condition  changes over time and must be addressable by the modeling effort. In order to achieve safety across all possible heart conditions, the heart models used during closed-loop verification should be able to cover all possible heart behaviors, more precisely, their mapping to pacemaker inputs. Over-approximation (\cite{CEGAR}) with non-determinism can be used to simplify model structure while covering larger variety of environmental behaviors. Techniques like model-checking can then be used to examine the whole closed-loop state space for property violations.\\ 
+\textbf{Model Formalism: }Choosing an appropriate formalism for the physiological models is important as the formalism determines the closed-loop state space and hence the feasibility to do model checking. The pacemaker utilizes the timing of local electrical events to diagnose heart conditions. It is therefore intuitive to use timed-automata models of the heart. With this formalizm, we use the UPPAAL model checking tool (\cite{uppaal_tut}) such that the whole closed-loop state space is explored.\\
+\textbf{Model Coverage: } While pacemakers are designed to treat bradycardia by maintaining the appropriate heart rate when the intrinsic rate is low. At the same time, a pacemaker should not adversely affect other heart conditions such as supraventricular tachycardia (\cite{pacemakerrecalls}). Even for the same patient, the heart condition changes over time and must be addressable by the modeling effort. In order to achieve safety across all possible heart conditions, the heart models used during closed-loop verification should be able to cover all possible heart behaviors, more precisely, their mapping to pacemaker inputs. Over-approximation (\cite{CEGAR}) with non-determinism can be used to simplify model structure while covering larger variety of environmental behaviors. Techniques like model-checking can then be used to examine the whole closed-loop state space for property violations.\\ 
 \textbf{Ambiguity Due To Low Sensing Capability: }The spatial sensing resolution of pacemakers is low, in terms of the number of sensing location (2-3 leads), as well as the information obtained from each sensing location (binary events). If abstraction rules utilize the fact that different heart conditions may generate exactly the same input sequence to the pacemaker, there will be ambiguities on concretizing abstract closed-loop executions. For certain conditional requirements, it is important to differentiate all possible concrete executions corresponding to an abstract execution. As the result, the heart model(s) should have the capability to differentiate these heart conditions when verifying certain properties.\\
-\textbf{Information Loss During Abstraction: }While over-approximation achieves simplicity and coverage, it also inevitably introduces invalid behaviors into the model which can cause false-negatives and false-positives during model checking. To solve this problem, refined models of the heart should be available which can differentiate and eliminate invalid executions when necessary to avoid false-positives.
+\textbf{Information Loss During Abstraction: }While over-approximation achieves simplicity and coverage, it also inevitably introduces invalid behaviors (e.g. not clinically feasible or relevant) into the model which can cause false-negatives and false-positives during model checking. To solve this problem, refined models of the heart should be available which can resolve spurious counterexamples and eliminate invalid executions when necessary to avoid false-positives.
 
-The most challenging aspect during closed-loop model checking is environment model abstraction and refinement. In \cite{STTT13} we developed a series of heart model abstractions at various abstraction levels. The models are abstracted using abstraction rules derived from physiological knowledge, thus ensuring that each abstraction step covers more physiological conditions. The models in adjacent abstraction levels also satisfy \textsf{timed-simulation} relationship (\cite{simulation}) to ensure complete coverage in the more abstract model. In the rest of the section, we briefly discuss the modeling process and the domain knowledge used. The detailed abstraction and proof for simulation relationship can be found in \cite{STTT13}.
+The most challenging aspect during closed-loop model checking is the abstraction and refinement of the environment model. In \cite{STTT13} we developed a series of heart model abstractions at various abstraction levels. The models are abstracted using abstraction rules derived from physiological knowledge, thus ensuring that each abstraction step covers more physiological conditions. The models in adjacent abstraction levels also satisfy \textsf{timed-simulation} relationship (\cite{simulation}) to ensure complete coverage in the more abstract model. In the remainder of this section, we briefly discuss this multi-scale modeling process and the domain knowledge used. The detailed abstraction and proof for simulation relationship can be found in \cite{STTT13}.
 \begin{figure}[!t]
 \center
 %\vspace{-10pt}
@@ -203,10 +203,10 @@ The most challenging aspect during closed-loop model checking is environment mod
 %\vspace{-10pt}
 \end{figure} 
 \subsection{Abstraction 0: Initial Abstraction}
-For the initial heart model, spatially we assume that every heart tissue is modeled. Temporally we model each heart tissue as an automaton $N0$ shown in \figref{HM_abs}.b. The beat-to-beat dynamics of heart tissue modeled by the deterministic model is abstracted using non-determinism, as the ERP period and conduction delay of the tissue are non-deterministically chosen from ranges instead of deterministic functions. The whole heart can be modeled by composing tissue models with different parameters $H_0=N_0^1\|N_0^2\cdots N_0^n$. However, for a real heart the number $n$ is very large and their connectivity and parameter values are difficult, and perhaps impossible, to determine, which makes verification with $H_0$ infeasible. 
+For the initial heart model, we assume the heart tissue is modeled with all its spatial detail. For the temporal aspect, we model each tissue region as an automaton $N0$ shown in \figref{HM_abs}(b). The beat-to-beat dynamics of heart tissue, modeled by the deterministic model, is abstracted using non-determinism. For example, the ERP period and conduction delay of the tissue are non-deterministically chosen from ranges instead of deterministic functions. The whole heart can be modeled by composing tissue models with different parameters $H_0=N_0^1\|N_0^2\cdots N_0^n$. However, for a real heart, the number $n$ is very large and the connectivity and parameter values are difficult, and perhaps impossible, to determine, which makes verification with $H_0$ infeasible. 
 
 \subsection{Abstraction 1: Abstract Conduction Delays With Paths}
-At the first abstraction step, we separate the conduction delay (modeled by the cond state in $N0$) from the new node automata $N1$ and model the conduction between two nodes using path automaton $P1$. Since the beat-to-beat dynamics are abstracted with non-determinism, the RRP state is merged with the Rest state in $N1$. The procedure gives us the intuition to abstract the heart as a conduction network as shown in \figref{HM_abs} (c). 
+At the first abstraction step, we separate the conduction delay (modeled by the \emph{cond} state in $N0$) from the new node automata $N1$ and model the conduction between two nodes using path automaton $P1$. Since the beat-to-beat dynamics are abstracted with non-determinism, the RRP state is merged with the Rest state in $N1$. The procedure gives us the intuition to abstract the heart as a conduction network as shown in \figref{HM_abs} (c). 
 
 \subsection{Abstraction 2: Merging Equivalent States}
 The heart model $H_1'$ still has equivalent locations. In Abstraction 2 we further abstract the node and path automata by merging equivalent states. In the new node automaton $N_2$ we merge the \textsf{RRP} state with the \textsf{Rest} state with:
@@ -240,6 +240,7 @@ $\preceq_t N_2^1\| P_2^1\| N_2^2\| P_2^2\| N_2^2$\\
 $\preceq_t N_3^1\| P_3\| N_3^2$\\
 $\preceq_t N_4^1\| N_4^2$
 
+Using this technique, we systematically create a family of heart models with different levels of complexity and expressivity. In the following sections we validate the heart models and describe the process for closed-loop model checking with multiple heart models.
 % \subsubsection{Abstracting Beat-to-beat Dynamics}
 % \subsubsection{Abstracting Conduction Delays with Path}
 % \subsubsection{Merging Activation-generating Nodes}
